# gworkspace-agent

./: .bandit  .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.sandbox  INTEGRATION_AUDIT.md  README.md  RELEASES  SETUP.md  STATS.md  TAGS  VALIDATION.md  auto_task_runner.py  benchmark_relevance.py  cli.py  cloudbuild.yaml  data.json  debug_drive_list.py  debug_export_doc.py  debug_read_sheet.py  extract_changelog.py  find_file.py  fix_imports.py  fix_issues.py  gws_cli  gws_cli.bat  gws_cli.py  gws_gradio.py  gws_gui.py  gws_gui_web.py  gws_telegram.py  gws_telegram_gate.py  manual_test_calendar.py  manual_test_docs.py  manual_test_gmail.py  manual_test_keep.py  (+20 more)
.gemini/: settings.json
.github/: dependabot.yml
.github/scripts/: count_unresolved.py  format_comments.py  write_ci_body.py  write_review_body.py
.github/workflows/: bandit.yml  ci.yml  ci.yml.rej  codeql.yml  devskim.yml  pipeline.yml  snyk-security.yml  summary.yml  sync-open-prs.yml
.planning/: ROADMAP.md  STATE.md
.planning/debug/: attribute-error-str-get-gmail.md
.pytest_temp/test_drive_export_placeholder_0/: download_d1
artifacts/: generate_manual_tests.py
assets/: demo_simulation.html
framework/: __init__.py  cli_runner.py  logger.py  task_runner.py  validator.py
gws_assistant/: __init__.py  __main__.py  agent_system.py  chat_utils.py  cli_app.py  config.py  drive_query_builder.py  exceptions.py  file_types.py  gmail_query_builder.py  gradio_app.py  gui_app.py  gws_runner.py  intent_parser.py  json_utils.py  langchain_agent.py  langgraph_workflow.py  llm_client.py  logging_utils.py  memory_backend.py  model_registry.py  models.py  output_formatter.py  planner.py  relevance.py  safety_guard.py  service_catalog.py  setup_wizard.py  telegram_app.py  verification_engine.py
gws_assistant/execution/: __init__.py  context_updater.py  executor.py  helpers.py  path_safety.py  resolver.py  resolver.py.orig  verifier.py  workflows.py
gws_assistant/human_gate/: __init__.py  base.py  console_gate.py  factory.py  telegram_gate.py
gws_assistant/tools/: __init__.py  code_execution.py  code_execution_inner.py  web_search.py
scratch/: auto_release.ps1  auto_release.sh  double_verify.py  repro_placeholder.py  repro_placeholder_2.py  test_planning.py  test_range.py  verify_doc.py  verify_drive_search.py  verify_email_sent.py  verify_folder.py
scripts/: capture_demo.py  master_demo_runner.py  multi_agent_runner.py  obs_controller.py  policy_scan.py  record_cli.py  record_cli_auto.py  record_gui_auto.py  record_web_auto.py  record_web_dev.py  record_web_pyauto.py  spawn_batch_1.py  telegram_send_message.py  verify_gws_data.py
skills/: README.md  autonomous-testing-and-fixing.skill
skills/autonomous-testing-and-fixing/: SKILL.md
src/gws_assistant/: __init__.py  __main__.py  agent_system.py  chat_utils.py  cli_app.py  config.py  config.py.rej  conversation.py  drive_query_builder.py  exceptions.py  execution.py  gmail_query_builder.py  gradio_app.py  gui_app.py  gws_runner.py  intent_parser.py  json_utils.py  langchain_agent.py  langgraph_workflow.py  llm_client.py  logging_utils.py  memory.py  memory_backend.py  model_registry.py  models.py  output_formatter.py  planner.py  react_agent.py  react_tools.py  relevance.py  safety_guard.py  service_catalog.py  setup_wizard.py  telegram_app.py  verification_engine.py
tests/: conftest.py  repro_get_message.py  repro_sheet_append.py  reproduce_issue.py  test_agent_system.py  test_chat_utils.py  test_cli_app.py  test_code_execution.py  test_code_execution_inner.py  test_code_sort.py  test_config.py  test_config.py.rej  test_config_precedence.py  test_config_singleton.py  test_config_strict.py  test_conversation.py  test_data_extraction_and_export_fixes.py  test_docs.py  test_drive_metadata.py  test_drive_to_gmail.py  test_e2b_sandbox.py  test_execution.py  test_file_operations.py  test_file_operations_negative.py  test_file_types.py  test_find_body_robustness.py  test_gradio_app_unit.py  test_gui_app_unit.py  test_gws_binary.py  test_hardening_policy.py  test_heuristic.py  test_human_gate.py  test_integration.py  test_integration_file_operations.py  test_intent_parser.py  test_intent_parser_heuristic.py  test_issue_drive_export_placeholder.py  test_issue_resolution.py  test_json_utils.py  test_keep.py  (+53 more)
(+84 files in other folders)
